# x-translate

./: README.md
backend/: .gitignore  Cargo.toml  README.md
backend/config/: default.yaml
backend/database/: database.db  sheme.sql
backend/src/: main.rs
backend/src/common/: config.rs  database.rs  error.rs  logger.rs  mod.rs  response.rs
backend/src/module/: mod.rs  model.rs  route.rs  router.rs
backend/src/module/interface/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  router.rs
backend/src/module/interface/service/: agent.rs  chat.rs  create.rs  delete.rs  info.rs  list.rs  mod.rs  prompt.rs  test.rs  update.rs
backend/src/module/project/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  router.rs
backend/src/module/project/service/: create.rs  delete.rs  execute.rs  info.rs  list.rs  mod.rs  start.rs  update.rs
backend/src/module/task/: dto.rs  mod.rs  model.rs  repository.rs  router.rs
backend/src/module/task/service/: create.rs  execute.rs  start.rs
backend/src/module/term/: mod.rs
backend/src/module/translate/: mod.rs
backend/src/module/translate/llm/: model.rs
backend/src/module/translate/llm/service/: create.rs  mod.rs  test.rs
backend/src/module/translate/project/: dto.rs  mod.rs  model.rs
backend/src/module/translate/task/: mod.rs  model.rs
backend/src/module/translate/term/: model.rs
backend/src/module/translate/worker/: mod.rs  model.rs
backend/src/module/util/: has_file_in_dir.rs  mod.rs
backend/src/module/worker/: model.rs
backend/src/module/worker/service/: create.rs  execute.rs  mod.rs  start.rs
(+43 files in other folders)
