[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
captcha_rust = "0.1.3"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
nanoid = "0.4.0"
once_cell = "1.21.3"
reqwest = "0.12.15"
rig-core = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
